Bug 100896 - HYPERLINK: Crash when I use hyperlink.
Summary: HYPERLINK: Crash when I use hyperlink.
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
5.3.0.0.alpha0+
Hardware: x86-64 (AMD64) Linux (All)
: highest critical
Assignee: Caolán McNamara
URL:
Whiteboard: target:5.3.0
Keywords: haveBacktrace
Depends on:
Blocks:
 
Reported: 2016-07-13 13:16 UTC by pietro.pangallo
Modified: 2016-10-25 18:40 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
GDB trace of the crash (22.08 KB, text/plain)
2016-07-18 04:13 UTC, Buovjaga
Details

Note You need to log in before you can comment on or make changes to this bug.
Description pietro.pangallo 2016-07-13 13:16:35 UTC
Description:

LibreOffice crash when: 
-I click hyperlink icon; 
-I use the shortcut Ctrl+K;  
-I go on Insert>Hyperlink.

Affected version:
Version: 5.3.0.0.alpha0+
Build ID: 29e91d5eedd2bf20504ce9ada625d33fec19dc9e
CPU Threads: 2; OS Version: Linux 4.1; UI Render: default; 
TinderBox: Linux-rpm_deb-x86_64@70-TDF, Branch:master, Time: 2016-06-16_23:05:06
Locale: it-IT (it_IT.UTF-8)
OS: openSUSE Leap 42.1 (x86_64)
Comment 1 pietro.pangallo 2016-07-13 14:03:37 UTC
(In reply to pietro.pangallo from comment #0)

WRONG AFFECTED VERSION:

Crash on:
Version: 5.3.0.0.alpha0+
Build ID: 54f2a4184d1296814e64cfeab1d06ae90d002357
CPU Threads: 2; OS Version: Linux 4.1; UI Render: default; 
TinderBox: Linux-rpm_deb-x86_64@70-TDF, Branch:master, Time: 2016-07-08_01:43:14
Locale: it-IT (it_IT.UTF-8); Calc: group
OS: openSUSE Leap 42.1 (x86_64)

Works on:
Version: 5.3.0.0.alpha0+
Build ID: 29e91d5eedd2bf20504ce9ada625d33fec19dc9e
CPU Threads: 2; OS Version: Linux 4.1; UI Render: default; 
TinderBox: Linux-rpm_deb-x86_64@70-TDF, Branch:master, Time:
2016-06-16_23:05:06
Locale: it-IT (it_IT.UTF-8)
OS: openSUSE Leap 42.1 (x86_64)
Comment 2 Buovjaga 2016-07-18 04:13:12 UTC
Created attachment 126263 [details]
GDB trace of the crash

Arch Linux 64-bit, KDE Plasma 5
Version: 5.3.0.0.alpha0+
Build ID: ab1b351840160655a9f0caedbb35e9fdf203c5a0
CPU Threads: 8; OS Version: Linux 4.6; UI Render: default; 
Locale: fi-FI (fi_FI.UTF-8); Calc: group
Built on July 16th 2016
Comment 3 Commit Notification 2016-07-18 08:01:24 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=25ab24b4c4fe748a05a59fb4eba0b2f96e71da38

Resolves: tdf#100896 crash in hyperlink dialog

It will be available in 5.3.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.