Resolves: tdf#100896 crash in hyperlink dialog

regression from...

commit 98747742b20c82382ed16b193e7bec175e905978
Author: Noel Grandin <noel@peralex.com>
Date:   Fri Jun 24 13:12:25 2016 +0200

    loplugin:singlevalfields in cui

which cut too deep

Change-Id: I0e42eed48196c9e037ba343eea93c2c854c0991c